--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,8 +2,6 @@
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
   width: 100vw;
   background-color: #f9f9f9;
 }
@@ -12,6 +10,7 @@
 }
 .landing{
   display: flex;
+  flex-wrap: wrap;
   background:linear-gradient( #000000e7 , #00000086),url("/IMG_20230408_165147_809.jpg");
   background-repeat: no-repeat;
   background-size: 100vw;
@@ -27,25 +26,20 @@
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
-  align-content: space-around;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 .cards{
   display: flex;
-    flex-direction: column;
-    width: 18rem;
-    height: 23rem;
-    border-width: 1px;
-    border-color: #b9b9b9;
-    border-style: solid;
-    border-radius: 10px;
-    align-items: center;
-    text-align: center;
-    margin: 1rem 2rem;
-    padding: 5px;
-    justify-content: space-evenly;
-    background-color: white;
-    box-shadow:2px 2px 2px grey;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 18rem;
+  height: 23rem;
+  background-color: white;
+  border: 1px solid #b9b9b9;
+  box-shadow:2px 2px 2px grey;
+  border-radius: 10px;
 }
 .compOne{
   display: flex;
@@ -53,8 +47,7 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  padding: 0 10rem;
-  margin: 5rem;
+  margin: 5rem 0;
   font-size: 1.1rem ;
 }
 .compOne > h1, .compOnepOne > h1 {
@@ -67,13 +60,17 @@
   align-items: center;
   width: 100vw;
 }
+.compOnepOne > p {
+  padding: 2.5%; 
+  font-size: 1.2rem;
+}
 .compOnepTwo{
   display: flex;
   justify-content: space-evenly;
   width: 100vw;
 }
 .slide1{
-  border-radius: 32px;
+  border-radius: 35px;
 }
 .ulist {
   list-style-type: none;
@@ -94,4 +91,88 @@
 }
 .ulist > li {
   padding: 5%;
+}
+
+.pricing{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.pricing svg {
+  position: relative;
+  display: block;
+  width: calc(133% + 5rem);
+  height: 8rem;
+}
+
+.pricing .shapeFill {
+  fill: #f9f9f9;
+}
+
+
+.pricing > h2 {
+  font-size: 3rem;
+  padding: 2% 0 ;
+}
+
+.pricing > ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 40vw;
+  padding: 1.5% 0;
+  font-size: 1.2rem;
+
+}
+
+.pricing > p {
+  display: flex;
+  text-align: center;
+  padding: 1.2% 0;
+
+}
+
+.priceCardContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 1.2% 0;
+  width: 100vw;
+}
+
+
+.priceCardContainer > div {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 13rem;
+  height: 18rem;
+  border: 1px solid #b9b9b9;
+  box-shadow:2px 2px 2px grey;
+  border-radius: 10px;
+}
+
+.priceCardContainer :hover{
+  box-shadow:4px 4px 4px grey;
+}
+
+.priceCardContainer > div >  h1 {
+  font-size: 3rem;
+  color: var(--themeColormaroon);
+  padding: 1.2% 0;
+}
+
+.priceCardContainer > div :hover {
+  box-shadow: none;
 }
